status changes, default changes

--- a/FlightLine.App/src/app/login/login.component.html
+++ b/FlightLine.App/src/app/login/login.component.html
@@ -19,7 +19,7 @@
                         <button mat-button class="text-button" (click)="changeUser('TM')">Training Manager</button>
                         <button mat-button class="text-button" (click)="changeUser('FO')">Flight Operations</button>
                         <button mat-button class="text-button" (click)="changeUser('RO')">Records Office</button>
-                        <button mat-button class="text-button" (click)="changeUser('ADMIN')">Administrator (Testing)</button>
+                        <!-- <button mat-button class="text-button" (click)="changeUser('ADMIN')">Administrator (Testing)</button> -->
                     </div>
 
                 </div>
