--- a/FlightLine.App/src/app/monitoring/monitoring.component.html
+++ b/FlightLine.App/src/app/monitoring/monitoring.component.html
@@ -68,10 +68,10 @@
                                     *ngIf="userService.currentUser !== 'RO'" (click)="openAvailability(form)">
                                     <i class="material-icons">calendar_month</i>
                                 </button>
-                                <button mat-icon-button class="action-button" matTooltip="Export to PDF"
+                                <!-- <button mat-icon-button class="action-button" matTooltip="Export to PDF"
                                     matTooltipPosition="below" matTooltipShowDelay="0">
                                     <i class="material-icons">picture_as_pdf</i>
-                                </button>
+                                </button> -->
                             </div>
                         </div>
                     </div>
