--- a/FlightLine.App/src/app/marks/marks.component.html
+++ b/FlightLine.App/src/app/marks/marks.component.html
@@ -179,7 +179,7 @@
                   </mat-form-field>
                   <mat-form-field appearance="outline" class="custom-form-field">
                     <mat-label>A/C</mat-label>
-                    <input [(ngModel)]="row.ac" matInput />
+                    <input [(ngModel)]="row.lastActivity" matInput />
                   </mat-form-field>
                   <mat-form-field appearance="outline" class="custom-form-field">
                     <mat-label>Result</mat-label>
