--- a/FlightLine.App/src/app/form/form.component.html
+++ b/FlightLine.App/src/app/form/form.component.html
@@ -177,7 +177,7 @@
               </mat-form-field>
               <mat-form-field appearance="outline" class="custom-form-field">
                 <mat-label>A/C</mat-label>
-                <input [(ngModel)]="row.lastActivity" matInput/>
+                <input [(ngModel)]="row.ac" matInput/>
               </mat-form-field>
               <mat-form-field appearance="outline" class="custom-form-field">
                 <mat-label>Result</mat-label>
