--- a/FlightLine.App/src/app/form/form.component.html
+++ b/FlightLine.App/src/app/form/form.component.html
@@ -62,7 +62,7 @@
           </div>
           <mat-form-field appearance="outline">
             <textarea class="asdf" matInput placeholder="Remarks..."></textarea>
-            <input matInput/>
+            <input [(ngModel)]="currentForm.formRemarks" matInput/>
           </mat-form-field>
         </div>
         <div class="right-side">
