--- a/FlightLine.App/src/app/app.component.scss
+++ b/FlightLine.App/src/app/app.component.scss
@@ -55,3 +55,12 @@
 .profile-button .material-icons {
     font-size: 36px;
 }
+
+ng-progress {
+    z-index: 999999999999999 !important;
+    color: #ffcb06 !important;
+    background-color: #ffcb06 !important;
+    stroke: #ffcb06 !important;
+    fill: #ffcb06 !important;
+    background: #ffcb06 !important;
+}
