--- a/FlightLine.App/src/app/approval/approval.component.scss
+++ b/FlightLine.App/src/app/approval/approval.component.scss
@@ -206,7 +206,7 @@ li {
 }
 
 .custom-form-field {
-  width: 200px;
+  width: 160px;
   height: auto;
   font-size: 12px;
   margin-top: 3px;
@@ -259,4 +259,10 @@ li {
 
 .asdf {
   resize: none;
+}
+
+.my-date-picker {
+  width: 160px;
+  height: 56px;
+  padding: 0;
 }
