--- a/FlightLine.App/src/app/marks/marks.component.scss
+++ b/FlightLine.App/src/app/marks/marks.component.scss
@@ -101,7 +101,7 @@ li {
 }
 
 .custom-form-field {
-  width: 200px;
+  width: 160px;
   height: auto;
   font-size: 12px;
   margin-top: 3px;
@@ -255,4 +255,10 @@ li {
 .helper-text {
   display: inline-block;
   margin-top: 24px;
+}
+
+.my-date-picker {
+  width: 160px;
+  height: 56px;
+  padding: 0;
 }
