--- a/FlightLine.App/src/app/app.component.html
+++ b/FlightLine.App/src/app/app.component.html
@@ -1,3 +1,9 @@
+<ng-progress #myProgress id="myProgress" [speed]="200" [color]="'#ffcb06'" [trickleSpeed]="250" [thick]="true" [ease]="'linear'"
+  [spinner]="false">
+</ng-progress>
+
+<progress></progress>
+
 <div class="header">
     <div style="position:relative; height: 100%; width: 100%;">
         <img class="header-logo" src="../assets/erau-logo.png">
@@ -8,6 +14,7 @@
         </button>
     </div>
 </div>
+
 <div class="app-body">
     <router-outlet></router-outlet>
 </div>
