--- a/FlightLine.App/src/app/marks/marks.component.html
+++ b/FlightLine.App/src/app/marks/marks.component.html
@@ -37,7 +37,7 @@
                     <input readonly [(ngModel)]="currentForm.phoneNumber" matInput type="number" />
                   </mat-form-field>
                   <mat-form-field appearance="outline">
-                    <mat-label>Last Activity Date</mat-label>
+                    <mat-label>Sent To Schedule</mat-label>
                     <input readonly [(ngModel)]="currentForm.sentToSchedule" [matDatepicker]="balls" matInput>
                     <!-- <mat-datepicker-toggle [for]="balls" matIconSuffix></mat-datepicker-toggle> -->
                     <mat-datepicker #balls></mat-datepicker>
